--- a/kks/app/src/main/res/layout/activity_main.xml
+++ b/kks/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:id="@+id/cantidad"/>
 
     <Button
