--- a/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/activity_app.xml
+++ b/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/activity_app.xml
@@ -32,18 +32,24 @@
                 android:layout_gravity="center"/>
         </androidx.appcompat.widget.Toolbar>
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="20"/>
+            android:layout_weight="20">
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="20"/>
+        </ScrollView>
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navBottom"
             app:backgroundTint="@color/editBackground"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             app:itemRippleColor="@color/background"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
