--- a/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/elemento_transaccion.xml
+++ b/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/elemento_transaccion.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,9 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/green"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
@@ -18,55 +22,69 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iconTransaccion"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/fact_check"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/iconTransaccion"/>
+                android:src="@drawable/fact_check"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:orientation="vertical"
-                android:layout_marginStart="20dp">
-                
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iconTransaccion"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <TextView
                     android:id="@+id/nombreTransaccion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nombre transaccion"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/descTransaccion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Descripcion transacción"
                     android:textColor="@color/white"
-                    android:textSize="10sp"/>
+                    android:textSize="10sp" />
             </LinearLayout>
 
             <TextView
+                android:id="@+id/montoElemento"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$ XX,XXX.00"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="80dp"
+                android:layout_marginEnd="4dp"
+                android:text="$ XX,XXX.00"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/opcionesTransaccion"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/opcionesTransaccion"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/opciones"
-                android:layout_marginStart="15dp"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
 
