--- a/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/fragment_main_page.xml
+++ b/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/fragment_main_page.xml
@@ -37,20 +37,28 @@
             app:cardCornerRadius="10dp"
             android:layout_marginTop="15dp"
             app:cardBackgroundColor="@color/background">
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/dollar_sign"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/dollar_sign"/>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginLeft="295dp"
-                    android:src="@drawable/credit_card"/>
-            </LinearLayout>
+                    android:src="@drawable/credit_card"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -173,8 +181,10 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:layout_marginTop="10dp"
+            android:dividerHeight="10sp"
+            android:divider="@color/black"
             android:id="@+id/listaTransacciones"/>
 
     </LinearLayout>
