--- a/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/elemento_transaccion.xml
+++ b/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/elemento_transaccion.xml
@@ -51,6 +51,14 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/fechaTransaccion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="18-feb-2024"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
+
+                <TextView
                     android:id="@+id/descTransaccion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -64,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
                 android:text="$ XX,XXX.00"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -73,12 +81,14 @@
                 app:layout_constraintEnd_toStartOf="@+id/opcionesTransaccion"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
+
             <ImageView
                 android:id="@+id/opcionesTransaccion"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/opciones"
+                android:src="@drawable/delete_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
