--- a/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/fragment_registrarse.xml
+++ b/1 Proyecto Final Files/ProyectitoFinal/app/src/main/res/layout/fragment_registrarse.xml
@@ -67,6 +67,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:id="@+id/edad"/>
         </com.google.android.material.textfield.TextInputLayout>
 
